--- a/project/interpreter.csproj
+++ b/project/interpreter.csproj
@@ -10,7 +10,7 @@
 	<PropertyGroup Condition="'$(Configuration)' == 'Debug'">
 		<DefineConstants>$(DefineConstants);DEBUG;TRACE</DefineConstants>
 		<DebugSymbols>true</DebugSymbols>
-		<DebugType>full</DebugType>
+		<DebugType>portable</DebugType>
 		<Optimize>false</Optimize>
 	</PropertyGroup>
 		<PropertyGroup Condition="'$(Configuration)' == 'Release'">
