--- a/__vscode_workspace/.vscode/tasks.json
+++ b/__vscode_workspace/.vscode/tasks.json
@@ -18,7 +18,7 @@
 				"owner": "c",
 				"fileLocation": ["relative", "${workspaceFolder}"],
 				"pattern": {
-					"regexp": "^(.*):([0-9]*):([0-9]*): (error|warning): (.*) \\[(.*)\\]$",
+					"regexp": "^(.+):(\\d+):(\\d+): (error|warning|note): ([^\\[]+)( \\[.*\\])?( +|)$",
 					"file": 1,
 					"line": 2,
 					"column": 3,
@@ -37,7 +37,7 @@
 				"owner": "c",
 				"fileLocation": ["relative", "${workspaceFolder}"],
 				"pattern": {
-					"regexp": "^(.*)\\(([0-9]*),([0-9]*)\\): (error|warning) (C[0-9]*): (.*)$",
+					"regexp": "^(.+)\\((\\d+),(\\d+)\\): (error|warning) (C\\d+): (.+)( +|)$",
 					"file": 1,
 					"line": 2,
 					"column": 3,
