improve CL error-matcher

--- a/__vscode_workspace/.vscode/tasks.json
+++ b/__vscode_workspace/.vscode/tasks.json
@@ -37,13 +37,13 @@
 				"owner": "c",
 				"fileLocation": ["autoDetect", "${workspaceFolder}"],
 				"pattern": {
-					"regexp": "^(.+)\\((\\d+),(\\d+)\\): (error|warning) (C\\d+): (.+)( +|)$",
+					"regexp": "^(.+)\\((\\d+),?(\\d+)?\\)( +|): (error|warning) (C\\d+): (.+)( +|)$",
 					"file": 1,
 					"line": 2,
 					"column": 3,
-					"severity": 4,
-					"code": 5,
-					"message": 6,
+					"severity": 5,
+					"code": 6,
+					"message": 7,
 				},
 			},
 		},
