update launch console param

--- a/__vscode_workspace/.vscode/launch.json
+++ b/__vscode_workspace/.vscode/launch.json
@@ -8,7 +8,7 @@
 			"args": [],
 			"cwd": "${workspaceFolder}/..",
 			"stopAtEntry": false,
-			"externalConsole": true,
+			"console": "newExternalWindow",
 			"type": "cppvsdbg",
 		},
 	]
